# bloodbank

./: CMakeLists.txt  main.cpp
bloodbank/: CMakeLists.txt  SupervisorDashboard.cpp  SupervisorDashboard.h  main.cpp
bloodbank/controllers/: DonorController.cpp  DonorController.h  DonorDashboard.cpp  DonorDashboard.h  MainWindow.cpp  MainWindow.h  SupervisorController.cpp  SupervisorController.h  SupervisorDashboard.cpp  SupervisorDashboard.h
bloodbank/db/: DatabaseManager.cpp  DatabaseManager.h
bloodbank/ui/: AppointmentForm.ui  DonorDashboard.ui  MainWindow.ui  SupervisorDashboard.ui
database/: bloodbank.db  schema.sql  schema_postgres.sql
headers/: DatabaseManager.h  Donor.h  DonorDashboardWindow.h  DonorLoginWindow.h  DonorRegisterWindow.h  HealthHistory.h  MedicalHistory.h  SupervisorChoiceWindow.h  SupervisorDashboardWindow.h  SupervisorFormsWindow.h  SupervisorLoginWindow.h  WelcomeWindow.h
sources/: DatabaseManager.cpp  DonorDashboardWindow.cpp  DonorLoginWindow.cpp  DonorRegisterWindow.cpp  SupervisorChoiceWindow.cpp  SupervisorDashboardWindow.cpp  SupervisorFormsWindow.cpp  SupervisorLoginWindow.cpp  WelcomeWindow.cpp
ui/: DonorDashboardWindow.ui  DonorLoginWindow.ui  DonorRegisterWindow.ui  SupervisorChoiceWindow.ui  SupervisorDashboardWindow.ui  SupervisorFormsWindow.ui  SupervisorLoginWindow.ui  WelcomeWindow.ui
